payload 1.0.35: switch G1 → Generational ZGC + AWT mitigation
MrCedriic 08:21 report analysis:
 - GC v2 (1.0.34) made max pause 522ms (WORSE than v1's 323ms) — bigger
   young gen + bursty mod alloc meant G1 couldn't meet 25ms budget.
 - Chronic killer is glfwPollEvents (81 hitches in one session, max 1264ms).
   Each is downstream of GC pause: GC stalls render thread → Windows
   events pile up → next poll drains them → 600-1300ms hitch.

Fix: Generational ZGC for sub-millisecond pauses (JEP 439, prod-ready
in JDK 21). Concurrent mark + relocate, no STW eviction. Kills both
the GC freeze AND the glfwPollEvents storm in one shot.

Also: disable Java2D's DDraw/D3D/OpenGL pipelines so MenuCanvas's AWT
init doesn't spawn an AWT-Windows thread that competes with GLFW's
main-thread event poll.